--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -1,5 +1,11 @@
-#copyButton, #helpMessage {
+#copyButton, #helpMessage, #addMessage, #listMessage, #deleteMessage {
     -fx-text-fill: white;
+    -fx-font-size: 16;
+}
+
+#quickHelp {
+    -fx-text-fill: orange;
+    -fx-font-size: 30;
 }
 
 #copyButton {
@@ -15,5 +21,23 @@
 }
 
 #helpMessageContainer {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
+
+
+
+#quickHelpContainer {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
+
+#addContainer {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
+
+#deleteContainer {
+    -fx-background-color: derive(#1d1d1d, 20%);
+}
+
+#listContainer {
     -fx-background-color: derive(#1d1d1d, 20%);
 }
