--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -7,9 +7,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
     <Image url="@/images/help_icon.png" />
   </icons>
@@ -18,27 +19,95 @@
       <stylesheets>
         <URL value="@HelpWindow.css" />
       </stylesheets>
+         <VBox prefHeight="409.0" prefWidth="762.0">
+            <children>
+      
+            <HBox fx:id="helpMessageContainer" alignment="CENTER">
+              <children>
+                <Label fx:id="helpMessage" text="Label">
+                  <HBox.margin>
+                    <Insets right="5.0" />
+                  </HBox.margin>
+                </Label>
+                <Button fx:id="copyButton" mnemonicParsing="false" onAction="#copyUrl" text="Copy URL">
+                  <HBox.margin>
+                    <Insets left="5.0" />
+                  </HBox.margin>
+                </Button>
+              </children>
+              <opaqueInsets>
+                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+              </opaqueInsets>
+              <padding>
+                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+              </padding>
 
-      <HBox alignment="CENTER" fx:id="helpMessageContainer">
-        <children>
-          <Label fx:id="helpMessage" text="Label">
-            <HBox.margin>
-              <Insets right="5.0" />
-            </HBox.margin>
-          </Label>
-          <Button fx:id="copyButton" mnemonicParsing="false" onAction="#copyUrl" text="Copy URL">
-            <HBox.margin>
-              <Insets left="5.0" />
-            </HBox.margin>
-          </Button>
-        </children>
-        <opaqueInsets>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-        </opaqueInsets>
-        <padding>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-        </padding>
-      </HBox>
+            </HBox>
+                <!--
+               <HBox fx:id="quickHelpContainer" alignment="CENTER" layoutX="10.0" layoutY="51.0" prefHeight="97.0" prefWidth="762.0">
+                  <children>
+                     <Label fx:id="quickHelp" text="Label">
+                        <HBox.margin>
+                           <Insets right="5.0" />
+                        </HBox.margin>
+                     </Label>
+                  </children>
+                  <opaqueInsets>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </opaqueInsets>
+                  <padding>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </padding>
+               </HBox>
+
+            <HBox fx:id="addContainer" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="97.0" prefWidth="762.0">
+               <children>
+                  <Label fx:id="addMessage" text="Label">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+               </padding>
+            </HBox>
+               <HBox fx:id="deleteContainer" alignment="CENTER" layoutX="10.0" layoutY="51.0" prefHeight="97.0" prefWidth="762.0">
+                  <children>
+                     <Label fx:id="deleteMessage" text="Label">
+                        <HBox.margin>
+                           <Insets right="5.0" />
+                        </HBox.margin>
+                     </Label>
+                  </children>
+                  <opaqueInsets>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </opaqueInsets>
+                  <padding>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </padding>
+               </HBox>
+               <HBox fx:id="listContainer" alignment="CENTER" layoutX="10.0" layoutY="51.0" prefHeight="97.0" prefWidth="762.0">
+                  <children>
+                     <Label fx:id="listMessage" text="Label">
+                        <HBox.margin>
+                           <Insets right="5.0" />
+                        </HBox.margin>
+                     </Label>
+                  </children>
+                  <opaqueInsets>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </opaqueInsets>
+                  <padding>
+                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+                  </padding>
+               </HBox>
+               -->
+            </children>
+         </VBox>
     </Scene>
   </scene>
 </fx:root>
