Add order example to simulate

--- a/src/main/resources/view/OrderDisplay.fxml
+++ b/src/main/resources/view/OrderDisplay.fxml
@@ -11,6 +11,7 @@
            xmlns:fx="http://javafx.com/fxml/1">
   <VBox>
     <Label text="Order Number: " styleClass="cell_order_label" />
+    <Label fx:id="orderNumber" text="Label" styleClass="cell_order_label"/>
   </VBox>
 
 
