Add more details to OrderDisplay panel, require order command to display details

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -137,6 +137,11 @@
     -fx-font-size: 20px;
     -fx-text-fill: white;
 }
+.cell_detail_label {
+    -fx-font-family: "Segoe UI";
+    -fx-font-size: 15px;
+    -fx-text-fill: white;
+}
 
 .stack-pane {
      -fx-background-color: derive(#1d1d1d, 20%);
