Add Gui for order status

--- a/src/main/resources/view/OrderListCard.fxml
+++ b/src/main/resources/view/OrderListCard.fxml
@@ -29,7 +29,7 @@
       <Label fx:id="personName" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="medicineName" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="status" styleClass="cell_small_label" text="\$status" />
+      <Label fx:id="status" text="\$status" />
     </VBox>
   </GridPane>
 </HBox>
