--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -348,12 +348,12 @@
     -fx-background-radius: 0;
 }
 
-#tags, #allergies {
+#tags, #allergies, #medicines {
     -fx-hgap: 7;
     -fx-vgap: 3;
 }
 
-#tags .label, #allergies .label{
+#tags .label, #allergies .label, #medicines .label{
     -fx-text-fill: white;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
@@ -368,3 +368,8 @@
 #allergies .label {
     -fx-background-color: #ff7377;
 }
+
+#medicines .label {
+    -fx-background-color: #40A347;
+}
+
