--- a/src/main/resources/view/OrderDisplay.fxml
+++ b/src/main/resources/view/OrderDisplay.fxml
@@ -6,17 +6,18 @@
 <StackPane fx:id="placeHolder" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
   <VBox spacing="20">
     <HBox spacing="10">
-      <Label styleClass="cell_order_label" text="Order Number: " underline="true" />
+      <Label styleClass="cell_order_label" text="Order Number: " />
       <Label fx:id="orderNumber" styleClass="cell_order_label" text="Label" />
+      <Label fx:id="status" text="\$status" style="-fx-font-size: 20px;" />
     </HBox>
 
     <HBox spacing="10">
-      <Label styleClass="cell_order_label" text="Name: " underline="true" />
+      <Label styleClass="cell_order_label" text="Name: " />
       <Label fx:id="orderPerson" styleClass="cell_order_label" text="Label" />
     </HBox>
 
     <HBox spacing="10">
-      <Label styleClass="cell_order_label" text="Medication: " underline="true" />
+      <Label styleClass="cell_order_label" text="Medication: " />
       <Label fx:id="orderDetails" styleClass="cell_order_label" text="Label" />
     </HBox>
   </VBox>
